@@ -58,6 +58,7 @@ class Angola(HolidayBase):
             self[date(year, MAR, 8)] = "Dia Internacional da Mulher"
             self[date(year, APR, 4)] = "Dia da Paz e Reconciliação"
             self[date(year, MAY, 1)] = "Dia Mundial do Trabalho"
+            self[date(year, SEP, 17)] = "Dia dos Heroes Nacional"
             self[date(year, NOV, 2)] = "Dia dos Finados"
             self[date(year, NOV, 11)] = "Dia da Independência"
             self[date(year, DEC, 25)] = "Dia de Natal e da Família"
@@ -73,10 +74,13 @@ class Angola(HolidayBase):
             if self.observed and year > 2017:
                 if k.weekday() == SUN:
                     pass
+            if self.observed and year > 2017:
                 if k.weekday() == TUE:
                     self[k - rd(days=1)] = v + " (Day off)"
                 elif k.weekday() == THU:
                     self[k + rd(days=1)] = v + " (Day off)"
+            if self.observed and year > 1994 and k.weekday() == SUN:
+                self[k + rd(days=1)] = v + " (Observed)"
 
 
 class AO(Angola):
