@@ -6,7 +6,7 @@ Released ????? ??, ????
 - Support for Djibouti (Abdisamade)
 - Support for United Arab Emirates (marcomasulli, mborsetti)
 - Support for Chile (mborsetti, dr-p)
-- Support for Angola (pietervdw115)
+- Support for Angola (jusce17, pietervdw115, dr-p)
 - Support for Malawi (pietervdw115)
 - Korea 2020 fix (MYUNGJE, dr-p)
 - Australia 2020 fix (bencollerson, trauty-is-me)
@@ -16,6 +16,7 @@ Released ????? ??, ????
 - Russia fixes (tserekh)
 - Ireland fixes (chiuczek)
 - Spain observed holidays fix (sermayoral)
+- South Africa observed holidays fix (pietervdw115)
 - France fix (mborsetti)
 - Mexico fix (mborsetti)
 - Singapore 2022 fix (mborsetti)
